@@ -12,6 +12,9 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (5.1-dev, SVN trunk):
 -------------------------------------
+
+- PostGIS: fix postgis idle-in-transaction problem (#2626)
+
 - AGG: enable ellipse symbol rotation for POINT/ANNOTATION layers (#2617)
 
 - RFC36: add more extensions to support templates (#2576)
